[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Heads/sprite_0.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/mousefollow.gd" type="Script" id=3]
[ext_resource path="res://Icons/point_0.png" type="Texture" id=4]
[ext_resource path="res://Player/MuzzleFlash1.png" type="Texture" id=5]
[ext_resource path="res://Player/PlayerHUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/Heads/sprite_1.png" type="Texture" id=7]
[ext_resource path="res://Player/CL.tscn" type="PackedScene" id=8]
[ext_resource path="res://SFX/silencer.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.7193, 31.3762 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="gunaudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.890196, 0.890196, 0.890196, 1 )
scale = Vector2( 0.55, 0.6 )
z_index = 1
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="Sprite"]
visible = false
position = Vector2( 1.02995, 1.37233 )
scale = Vector2( 1.05136, 1.05489 )
z_as_relative = false
texture = ExtResource( 7 )
color = Color( 0.862745, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.72549, 0.282353, 0.282353, 1 )
scale = Vector2( 0.9, 0.9 )
z_index = -1
texture = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Pointer" type="Sprite" parent="."]
texture = ExtResource( 4 )
script = ExtResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
scale = Vector2( 0.262223, 0.248303 )
enabled = true
collision_mask = 3

[node name="MF" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="RH" type="Sprite" parent="."]
position = Vector2( 0.273605, 0.663651 )
scale = Vector2( 0.922759, 0.249248 )
texture = ExtResource( 5 )

[node name="PlayerCanvas" type="CanvasLayer" parent="."]

[node name="PlayerHUD" parent="PlayerCanvas" instance=ExtResource( 6 )]

[node name="CL" parent="." instance=ExtResource( 8 )]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="timeout" from="DodgeTimer" to="." method="_on_DodgeTimer_timeout"]
